# swarmbox

./: Cargo.toml  README.md  run-cli
.github/workflows/: build-cli.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/models/: common.rs  container.rs  image.rs  mod.rs  network.rs  swarm.rs  system.rs  volume.rs
cli/: Cargo.toml
cli/src/: commands.rs  compose.rs  main.rs
cli/src/commands/: build.rs  main.rs
cli/src/compose/: context.rs  data.rs  modules.rs  processing.rs  processors.rs  stacks.rs  state.rs  util.rs  yaml.rs  yaml_util.rs
cli/src/compose/data/: paths.rs  stacks.rs
cli/src/compose/filters/: configs.rs  includes.rs
cli/src/compose/processors/: configs.rs  includes.rs
cli/src/compose/yaml/: mapping_ext.rs
cli/src/data/: config.rs
cli/src/docker/: commands.rs
cli/src/util/: fs.rs
processing/: Cargo.toml
processing/src/: data.rs  lib.rs  processing.rs  processors.rs
processing/src/data/: cache.rs  context.rs  errors.rs  stacks.rs
processing/src/processors/: configs.rs  includes.rs  processor.rs  secrets.rs
processing/src/yaml/: mapping_ext.rs  owned_ext.rs  yaml_util.rs
processing/tests/resources/: config.yml  module.yml  stack.yml
shared/: Cargo.toml
shared/src/data/: config.rs  paths.rs
util/: Cargo.toml
util/src/: lib.rs  path_walker.rs
