[workspace]
resolver = "3"
members = ["cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
clap = { version = "4.5.60", features = ["derive"] }
saphyr = { version = "0.0.6" }

log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.11.9"
