[workspace]
resolver = "3"
members = ["cli", "api", "processing", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
saphyr = { version = "0.0.6" }

async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "fs", "io-util"] }
reqwest = { version = "0.13.2", features = ["json"] }
clap = { version = "4.5.60", features = ["derive"] }

log = { version = "0.4.29", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = "0.11.9"
