[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
processing = { path = "../processing" }

anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
