[package]
name = "processing"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
util = { path = "../util" }

async-trait = { workspace = true }
tokio = { workspace = true }
saphyr = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

regex = "1.12.3"
sha2 = "0.10.9"
