[package]
name = "processing"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
util = { path = "../util" }

async-trait = { workspace = true }
tokio = { workspace = true }
saphyr = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

sha2 = { workspace = true }
hex = "0.4.3"
