[package]
name = "processing"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
util = { path = "../util" }

anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
saphyr = { workspace = true }

log = { workspace = true }

sha2 = { workspace = true }
hex = "0.4.3"
